--- a/web/static/index.html
+++ b/web/static/index.html
@@ -2,16 +2,17 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="utf-8">
-    <title>Processinho</title>
+    <title>LegisApp</title>
     <meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" href="../processinho.css">
     <base href="/" />
 	<script src="../bower_components/soyutils/soyutils.js"></script>
+    <script src="../bower_components/moment/min/moment-with-locales.js"></script>
 	<script src="../globals/processinho.js"></script>
 </head>
 <body>
-	<h1>Processinho</h1>
+	<h1>LegisApp</h1>
 	<script type="text/javascript">
 		new metal.Processinho({
             visible: true
